Changes with APR-util 1.3.0

  *) Fix the escape implementations for the sqlite2 and sqlite3 dbd
     back ends.
     [Ronen Mizrahi <ronen tversity.com>, Garrett Rooney]

  *) On platforms that use autoconf stop automatically linking against
     apr-iconv when an apr-iconv source dir is found in ../apr-iconv.
     Instead, add a --with-apr-iconv option to configure that lets you
     specify the relative path to your apr-iconv source directory.
     [Garrett Rooney]

  *) APR_FIND_APU macro now supports customisable detailed checks on
     each installed apr-util. [Justin Erenkrantz, Colm MacCarthaigh]

  *) APR_FIND_APU macro no longer checks /usr/local/apache2/
     [Colm MacCarthaigh]

  *) Add apr_dbd_oracle driver [Nick Kew and Chris Darroch]

  *) Fix bug in test suite that cause testbuckets to write 8GB file
     on Mac OS X.  [Justin Erenkrantz]

  *) Teach configure how to find the Novell LDAP SDK. [Graham Leggett]

  *) Fix GMT offset for several date formats and add a new format.
     [Maxime Petazzoni <maxime.petazzoni bulix.org>]

Changes with APR-util 1.2.0

  *) Fix usage of ldapssl_init/ldap_sslinit on platforms that support
     these API's including Win32.  Support APR_HAS_LDAP_START_TLS_S
     flag in the Win32 LDAP API, to drop usage of ldap_start_ssl_s 
     and ldap_stop_ssl_s on Win32 by default (change the flag in apr_ldap.hw
     to enable if supported on a given OS level). [William Rowe]

  *) Fix apr_rmm_realloc() offset calculation bug.  [Keith Kelleman
     <keith.kelleman oracle.com>]

  *) Add sqlite3 support to APR DBD. [Rick Keiner <rick_keiner yahoo.com>]

  *) Fix build failure with non-threaded APR on AIX.  PR 34655.
     [Ryan Murray <rmurray+apache cyberhqz.com>]

  *) Add sqlite2 support to APR DBD. [Ryan Phillips <ryan trolocsis.com>]

  *) Introduction of APR DBD layer.  [Nick Kew]

Changes with APR-util 1.1.2

  *) Fix libaprutil.rc for Win32 builds [William Rowe, Justin Erenkrantz]

Changes with APR-util 1.1.1
